{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 142,
  "lineage": "54113f15-f264-ef88-6b47-4f5868ec4037",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c53b66c73ce32e51",
            "arn": "arn:aws:ec2:eu-central-1:703671923213:elastic-ip/eipalloc-0c53b66c73ce32e51",
            "association_id": "eipassoc-0104e51249aa240b1",
            "domain": "vpc",
            "id": "eipalloc-0c53b66c73ce32e51",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d6812284f8163888",
            "private_dns": "ip-10-0-1-145.eu-central-1.compute.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-3-79-91-58.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.79.91.58",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdd6d7420844683b",
            "arn": "arn:aws:ec2:eu-central-1:703671923213:instance/i-06468dbe2e6f6c8a3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06468dbe2e6f6c8a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-065c5857b92df869f",
            "private_dns": "ip-10-0-1-75.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.75",
            "public_dns": "ec2-3-123-42-136.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.42.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cffd5628dc6548e4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3a07353d43ad002",
            "tags": {
              "Name": "public-Instance"
            },
            "tags_all": {
              "Name": "public-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba2f3c550a9db42e"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc",
            "tls_private_key.rsa-4096"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cdd6d7420844683b",
            "arn": "arn:aws:ec2:eu-central-1:703671923213:instance/i-06c25a3b57f605cbd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c25a3b57f605cbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009f41cd2e2c4b5c0",
            "private_dns": "ip-10-0-2-8.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.8",
            "public_dns": "ec2-18-184-6-125.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.6.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-042565d0c28548311",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a311d2de6c2431f",
            "tags": {
              "Name": "public-Instance-2"
            },
            "tags_all": {
              "Name": "public-Instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba2f3c550a9db42e"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc",
            "tls_private_key.rsa-4096"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:internet-gateway/igw-0c47d1136acdbb95a",
            "id": "igw-0c47d1136acdbb95a",
            "owner_id": "703671923213",
            "tags": {
              "Name": "terraform-test-igw"
            },
            "tags_all": {
              "Name": "terraform-test-igw"
            },
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:loadbalancer/app/test-application-lb/0240d2900d4241a3",
            "arn_suffix": "app/test-application-lb/0240d2900d4241a3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-application-lb-946795930.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:loadbalancer/app/test-application-lb/0240d2900d4241a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-application-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e400ec7a7952eff7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a311d2de6c2431f"
              },
              {
                "subnet_id": "subnet-0d3a07353d43ad002"
              }
            ],
            "subnets": [
              "subnet-00a311d2de6c2431f",
              "subnet-0d3a07353d43ad002"
            ],
            "vpc_id": "vpc-048d9241b9df9927e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:listener/app/test-application-lb/0240d2900d4241a3/6d6c542db9844eef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:listener/app/test-application-lb/0240d2900d4241a3/6d6c542db9844eef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:loadbalancer/app/test-application-lb/0240d2900d4241a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:listener/app/test-application-lb/0240d2900d4241a3/369dc8b9a122e609",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:listener/app/test-application-lb/0240d2900d4241a3/369dc8b9a122e609",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:loadbalancer/app/test-application-lb/0240d2900d4241a3",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_lb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887",
            "arn_suffix": "targetgroup/alb-target-group/4d409aac01b1e887",
            "deregistration_delay": "1000",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:703671923213:loadbalancer/app/test-application-lb/0240d2900d4241a3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887-20250124193519292000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887",
            "target_id": "i-06468dbe2e6f6c8a3"
          },
          "dependencies": [
            "aws_instance.public_instance",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.tg",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc",
            "tls_private_key.rsa-4096"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887-20250124194154623300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:703671923213:targetgroup/alb-target-group/4d409aac01b1e887",
            "target_id": "i-06c25a3b57f605cbd"
          },
          "dependencies": [
            "aws_instance.public_instance-2",
            "aws_key_pair.key_pair",
            "aws_lb_target_group.tg",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc",
            "tls_private_key.rsa-4096"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c53b66c73ce32e51",
            "association_id": "eipassoc-0104e51249aa240b1",
            "connectivity_type": "public",
            "id": "nat-0b6b8993503414194",
            "network_interface_id": "eni-0d6812284f8163888",
            "private_ip": "10.0.1.145",
            "public_ip": "3.79.91.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d3a07353d43ad002",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:route-table/rtb-0ecba3238d06f53a7",
            "id": "rtb-0ecba3238d06f53a7",
            "owner_id": "703671923213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6b8993503414194",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-test-private-rt"
            },
            "tags_all": {
              "Name": "terraform-test-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:route-table/rtb-0de166ea761c92f8d",
            "id": "rtb-0de166ea761c92f8d",
            "owner_id": "703671923213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c47d1136acdbb95a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-test-public-rt"
            },
            "tags_all": {
              "Name": "terraform-test-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "terraform-test-subnet-c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0845b4a05199d6e4e",
            "route_table_id": "rtb-0ecba3238d06f53a7",
            "subnet_id": "subnet-0a734a483c4e64e00"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "terraform-test-subnet-d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3950911497ba0ba",
            "route_table_id": "rtb-0ecba3238d06f53a7",
            "subnet_id": "subnet-030a372c5fef22ef9"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "terraform-test-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9c60cb382d492d4",
            "route_table_id": "rtb-0de166ea761c92f8d",
            "subnet_id": "subnet-0d3a07353d43ad002"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "terraform-test-subnet-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df8b11e8cda8aa7d",
            "route_table_id": "rtb-0de166ea761c92f8d",
            "subnet_id": "subnet-00a311d2de6c2431f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:security-group/sg-0e400ec7a7952eff7",
            "description": "Allow HTTP and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e400ec7a7952eff7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "703671923213",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:security-group/sg-08c3f344a207d819c",
            "description": "Allow SSH and HTTP access",
            "egress": [],
            "id": "sg-08c3f344a207d819c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer-SG",
            "name_prefix": "",
            "owner_id": "703671923213",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "terraform-test-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:subnet/subnet-0a734a483c4e64e00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a734a483c4e64e00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671923213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-subnet-c",
              "env": "Test"
            },
            "tags_all": {
              "Name": "terraform-test-subnet-c",
              "env": "Test"
            },
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "terraform-test-subnet-d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:subnet/subnet-030a372c5fef22ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030a372c5fef22ef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "703671923213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-subnet-d",
              "env": "Test"
            },
            "tags_all": {
              "Name": "terraform-test-subnet-d",
              "env": "Test"
            },
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "terraform-test-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:subnet/subnet-0d3a07353d43ad002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3a07353d43ad002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671923213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-subnet-a",
              "env": "Test"
            },
            "tags_all": {
              "Name": "terraform-test-subnet-a",
              "env": "Test"
            },
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "terraform-test-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:subnet/subnet-00a311d2de6c2431f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a311d2de6c2431f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "703671923213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-test-subnet-b",
              "env": "Test"
            },
            "tags_all": {
              "Name": "terraform-test-subnet-b",
              "env": "Test"
            },
            "vpc_id": "vpc-048d9241b9df9927e"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:703671923213:vpc/vpc-048d9241b9df9927e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2474397e8feb8bc",
            "default_route_table_id": "rtb-009ff8dcfec9306b3",
            "default_security_group_id": "sg-0ba2f3c550a9db42e",
            "dhcp_options_id": "dopt-081d1417ce5269846",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048d9241b9df9927e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009ff8dcfec9306b3",
            "owner_id": "703671923213",
            "tags": {
              "Name": "terraform-test-vpc"
            },
            "tags_all": {
              "Name": "terraform-test-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}